# pre-commit-django-fields

./: .pre-commit-hooks.yaml  README.md  package.json  pyproject.toml  setup.cfg
pre_commit_django_fields/: analyzer.py  data_classes.py  main.py
pre_commit_django_fields/tests/: example_models_1.golden.json  example_models_1.py  example_models_2.golden.json  example_models_2.py  example_models_3.py  example_models_4.golden.json  example_models_4.py  example_models_5.py  tests.py
pre_commit_django_fields/utils/: find_errors.py  find_fields.py
require_prefixed_ids/: main.py
