[tool.poetry]
name = "pre-commit-django-fields"
version = "v1.0.3"
description = ""
authors = ["John Oram <john@oram.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pre_commit_django_fields"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
pre-commit-django-fields = "pre-commit-django-fields.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
