# setup.cfg
[metadata]
name = require-prefixed-ids
description = pre-commit hook to require prefixed ids in django models
version = 0.1.0
author = John Oram
author_email = john@oram.ca
license = MIT

[options]
packages = find:
install_requires =
    pre-commit
    django
    structlog
    django_structlog
    structlog_sentry


[options.entry_points]
console_scripts =
    require-prefixed-ids = require_prefixed_ids.main:main